Fixed alignment of checkout page and summary card for small devices

--- a/src/screens/checkout/Checkout.css
+++ b/src/screens/checkout/Checkout.css
@@ -21,3 +21,9 @@
 .grid-list-tile-container {
   padding: 16px 8px 16px 16px;
 }
+
+@media only screen and (max-width: 600px), (max-width: 768px) {
+  .MuiStepper-root {
+    padding: 18px !important;
+  }
+}
